--- a/public/login.html
+++ b/public/login.html
@@ -38,7 +38,7 @@
       <div class="container login-form">
         <div class="row form-container">
           <div class="col s6 valign-wrapper sign-in hide-form" id="sign-in-form">
-            <div class="section container" style="width: 70%; height: 70%">
+            <div class="section container" style="width: 70%; height: 90%">
               <h4
                 class="teal-text text-lighten-2 center-align"
                 style="width: 100%"
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="col s6 valign-wrapper sign-up" id="sign-up-form">
-            <div class="section container" style="width: 70%; height: 70%">
+            <div class="section container" style="width: 70%; height: 90%">
               <h4
                 class="teal-text text-lighten-2 center-align"
                 style="width: 100%"
@@ -99,8 +99,7 @@
                 Create Account
               </h4>
               <div class="row">
-                <!-- <button class="twitter-authenticate">Sign up with Twitter</button> -->
-                <form action="/api/auth/register" method="post" class="col s12">
+                <form action="/api/auth/register" method="post" class="col s12" enctype="multipart/form-data">
                   <div class="row">
                     <div class="input-field col s6">
                       <input
@@ -132,10 +131,10 @@
                     </div>
                     <div class="input-field col s12">
                       <input
-                        type="text"
                         id="datepicker"
-                        name="birthdate"
+                        type="text"
                         class="datepicker p-left"
+                        name="birthdate"
                       />
                       <label for="datepicker" class="pos-left">Birthdate</label>
                       <span
@@ -148,10 +147,27 @@
                     </div>
                     <div class="input-field col s12">
                       <input
+                        id="telephone"
+                        type="text"
+                        class="validate p-left"
+                        name="telephone"
+                        required
+                      />
+                      <label for="telephone" class="pos-left">Telephone</label>
+                      <span
+                        class="helper-text"
+                        data-error="This field is required"
+                      ></span>
+                      <i class="material-icons prefix teal-text text-lighten-2"
+                        >phone</i
+                      >
+                    </div>
+                    <div class="input-field col s12">
+                      <input
                         id="email"
                         type="email"
-                        name="username"
                         class="validate p-left"
+                        name="username"
                         required
                       />
                       <label for="email" class="pos-left">Email</label>
@@ -173,9 +189,9 @@
                       <input
                         id="password"
                         type="password"
+                        class="p-left"
                         name="password"
                         required
-                        class="p-left"
                       />
                       <label for="password" class="pos-left">Password</label>
                       <span
@@ -185,6 +201,24 @@
                       <i class="material-icons prefix teal-text text-lighten-2"
                         >security</i
                       >
+                    </div>
+                    <div class="file-field input-field">
+                      <div class="btn">
+                        <span>File</span>
+                        <input type="file">
+                      </div>
+                      <div class="file-path-wrapper">
+                        <input 
+                          id="image" 
+                          type="text" 
+                          class="file-path validate" 
+                          name="image"
+                          required>
+                      </div>
+                      <span
+                        class="helper-text"
+                        data-error="This field is required"
+                      ></span>
                     </div>
                     <div class="digi-button-cont">
                       <button
@@ -204,8 +238,8 @@
         <div class="login-cover">
           <div class="login-window" id="form-window">
             <div class="login-content valign-wrapper" id="form-content">
-              <div class="row">
-                <div class="col s6">
+              <div class="login-row">
+                <div class="login-col">
                   <div class="container">
                     <h4 style="text-align: center">
                       Welcome Back!
@@ -231,7 +265,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col s6">
+                <div class="login-col">
                   <div class="container">
                     <h4 style="text-align: center">
                       Hello Friend!
