Tercera Entrega - Modificando login.html y profile.ejs 2

--- a/public/login.html
+++ b/public/login.html
@@ -202,17 +202,19 @@
                         >security</i
                       >
                     </div>
-                    <div class="file-field input-field">
+                    <div class="file-field input-field col s12">
                       <div class="btn">
                         <span>File</span>
-                        <input type="file">
+                        <input
+                          id="image" 
+                          type="file" 
+                          name="image" 
+                          required>
                       </div>
                       <div class="file-path-wrapper">
-                        <input 
-                          id="image" 
+                        <input
                           type="text" 
                           class="file-path validate" 
-                          name="image"
                           required>
                       </div>
                       <span
